<resources>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">心衰管理</string>
    <string name="main_title">心衰管理</string>
    <string name="zixun">心衰百科</string>
    <string name="zixun_info">护理手册</string>
    <string name="zixun_sport">饮食运动</string>
    <string name="zixun_expert">心视野</string>
    <string name="zixun_detail">详情</string>
    <string name="celing_open_fail">蓝牙打开失败,请您打开权限后重试</string>
    <string name="celing">智能检测</string>
    <string name="celing_data">数据管理</string>
    <string name="yongyao">科学用药</string>
    <string name="yongyao_remind">用药提醒</string>
    <string name="yongyao_info">常见问题</string>
    <string name="yongyao_add">添加用药提醒</string>
    <string name="huli">日常护理</string>
    <string name="huli_patient">病人护理</string>
    <string name="huli_weight">体重记录</string>
    <string name="huli_mood">健康心情</string>
    <string name="huli_life">生活日志</string>
    <string name="huli_weight_info">体重详情</string>
    <string name="yishi">智能咨询</string>
    <string name="yishi_chat">咨询会话</string>
    <string name="regist">注册</string>
    <string name="regist_phone_hint">请输入手机号</string>
    <string name="regist_code_hint">请输入验证码</string>
    <string name="password_hint">请设置一个密码</string>
    <string name="password_again_hint">请再次输入密码</string>
    <string name="regist_next_hint">下一步，完善个人信息</string>
    <string name="regist_next">下一步</string>
    <string name="regist_info">信息</string>
    <string name="regist_info_name">姓名</string>
    <string name="regist_info_name_hint">请输入姓名</string>
    <string name="regist_info_age">年龄</string>
    <string name="regist_info_age_hint">请选择年龄</string>
    <string name="regist_info_weight">体重</string>
    <string name="regist_info_weight_hint">请选择体重</string>
    <string name="regist_info_number">医生编号</string>
    <string name="regist_info_number_hint">手动输入或扫描</string>
    <string name="login">用户登录</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_login">立即登录</string>
    <string name="login_please">登录</string>
    <string name="set">个人中心</string>
    <string name="centerinfo">个人资料</string>
    <string name="set_life_data">生活日志</string>
    <string name="set_about">关于我们</string>
    <string name="set_limit">免责声明</string>
    <string name="set_other">其他</string>
    <string name="set_friend">好友列表</string>
    <string name="set_friend_add">添加好友</string>
    <string name="set_friend_add_hint">请输入好友账号</string>
    <string name="set_friend_add_button">加入到好友列表</string>
    <string name="set_collect">我的收藏</string>
    <string name="set_life_data_detail">详情</string>
    <string name="news">消息</string>
    <string name="news_friend">好友数据</string>
    <string name="news_notice">消息公告</string>
    <string name="ok">确定</string>
    <string name="phone_hint">请输入手机号码</string>
    <string name="phone_format_hint">请输入11位的手机号</string>
    <string name="phone_error">请输入正确的手机号码</string>
    <string name="phone_notregist">该用户不存在</string>
    <string name="weight_add">添加体重</string>
    <string name="evaluate">心衰评估</string>
    <string name="time_hint">请选择时间</string>
    <string name="forget_pass">忘记密码</string>
    <string name="forget_success">修改成功</string>
    <string name="forget_fail">修改失败,请重试</string>
    <string name="code_no">请获取短信验证码</string>
    <string name="code_error">短信验证码有误</string>
    <string name="code_send">短信验证码已发送至%s</string>
    <string name="finish">完成</string>
    <string name="save">完成</string>
    <string name="help">心衰助手</string>
    <string name="phone">电话咨询</string>
    <string name="service">更多服务</string>
    <string name="service_shop">健康商城</string>
    <string name="service_shop_zhineng">一键式智能呼叫</string>
    <string name="service_shop_xindian">远程心电监护</string>
    <string name="service_shop_xuetang">血糖管理产品</string>
    <string name="service_shop_xinshuai">心衰管理产品</string>
    <string name="service_shop_huizhen">专家会诊</string>
    <string name="service_shop_details">产品详情</string>
    <string name="service_shop_details_huizhen">专家简介</string>
    <string name="service_other">更多应用</string>
    <string name="help_weight">体重记录</string>
    <string name="help_water">出入水量</string>
    <string name="help_heart">心率记录</string>
    <string name="help_heart_info">心率详情</string>
    <string name="pinggu">病情评估</string>
    <string name="pinggu_history">历史评估</string>
    <string name="pinggu_count">已有%d人进行评估</string>
    <string name="pinggu_history_count">第%d次分析评估报告</string>
    <string name="remind">智能提醒</string>
    <string name="remind_celing">测量提醒</string>
    <string name="remind_yao">用药提醒</string>
    <string name="remind_huli">护理任务提醒</string>
    <string name="remind_huli_add">添加护理提醒</string>
    <string name="phone_number_ofzixun">tel://4000906162</string>
    <string name="version_new">当前已是最新版本,无需更新</string>
    <string name="version_old">有新版本</string>
    <string name="download_fail">下载失败</string>
    <string name="push_fail">推送失败</string>
    <string name="push_success">推送成功</string>
    <string name="choose_type">请先选择类型</string>
    <string name="good_success">点赞成功</string>
    <string name="good_fail">点赞失败</string>
    <string name="house_success">收藏成功</string>
    <string name="house_lose">取消收藏</string>
    <string name="house_fail">收藏失败</string>
    <string name="pinggu_choose">请选择</string>
    <string name="choose_time">请选择时间</string>
    <string name="choose_week">请选择星期</string>
    <string name="choose_name">请选择名字</string>
    <string name="save_success">保存成功</string>
    <string name="sync_success">同步成功</string>
    <string name="sync_fail">同步失败</string>
    <string name="time_late">选择时间不能早于当前时间</string>
    <string name="time_early">选择时间不能晚于当前时间</string>
    <string name="alarm_repeat">已经设置过当前提醒</string>
    <string name="scan_choose">请选择标曲</string>
    <string name="no_data">没有数据</string>
    <string name="no_data_send">请输入内容后发送</string>
    <string name="celing_notif_info">提示您获取结果</string>
    <string name="check_network">请检查网络</string>
    <string name="check_network_timeout">网络连接超时，请重试</string>
    <string name="cache_title">清除缓存</string>
    <string name="cache_msg">是否清除缓存</string>
    <string name="phone_title">提示</string>
    <string name="phone_msg">设置您的靓照</string>
    <string name="phone_graph">拍照</string>
    <string name="phone_album">相册</string>
    <string name="useresc_title">退出当前账号</string>
    <string name="useresc_msg">是否退出当前账号</string>
    <string name="upgrade_title">版本升级</string>
    <string name="check_time">选择时间</string>
    <string name="push_title">推送</string>
    <string name="push_msg">是否推送给好友</string>
    <string name="pinggu_title">进行评估</string>
    <string name="pinggu_msg">是否测量NT-proBNP值后进行评估</string>
    <string name="pinggu_result_msg">此项评估仅供参考,如需更专业的评估请检测NT-proBNP</string>
    <string name="error_style_empty">style cannot be empty</string>
    <string name="error_alias_empty">alias cannot be empty</string>
    <string name="error_tag_empty">tag cannot be empty</string>
    <string name="error_tag_gs_empty">Invalid format</string>
    <string name="error_network">Failed to init due to network exception.</string>
    <string name="logining">Running in background. Please see log.</string>
    <string name="setting_su">Succeed to set</string>
    <string-array name="stream_entries">
        <item>通话</item>
        <item>系统</item>
        <item>铃声</item>
        <item>音乐</item>
        <item>闹铃</item>
        <item>通知</item>
    </string-array>
    <string-array name="stream_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="voicer_cloud_entries">
        <item>小燕</item>
        <item>小宇</item>
        <item>凯瑟琳</item>
        <item>亨利</item>
        <item>玛丽</item>
        <item>小研</item>
        <item>小琪</item>
        <item>小峰</item>
        <item>小梅</item>
        <item>小莉</item>
        <item>小蓉</item>
        <item>小芸</item>
        <item>小坤</item>
        <item>小强 </item>
        <item>小莹</item>
        <item>小新</item>
        <item>楠楠</item>
        <item>老孙</item>
    </string-array>
    <string-array name="voicer_cloud_values">
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>catherine</item>
        <item>henry</item>
        <item>vimary</item>
        <item>vixy</item>
        <item>xiaoqi</item>
        <item>vixf</item>
        <item>xiaomei</item>
        <item>xiaolin</item>
        <item>xiaorong</item>
        <item>xiaoqian</item>
        <item>xiaokun</item>
        <item>xiaoqiang</item>
        <item>vixying</item>
        <item>xiaoxin</item>
        <item>nannan</item>
        <item>vils</item>
    </string-array>
    <string name="text_tts_source">董利康山西运城人士,2013年获得状元&#8230;</string>
    <string name="text_tts_source_en">fuck you</string>
    <string name="tts_toast_format" formatted="false">缓冲进度为%d%%，播放进度为%d%%</string>
    <string-array name="evaluate_title_list">
        <item>是否咳嗽、喘不上气？</item>
        <item>呼吸受阻，肺部出现啰音？</item>
        <item>在家无法从事简单的家务？</item>
        <item>需要卧床疗养？</item>
        <item>步行或上楼梯很困难？</item>
        <item>身体浮肿情况？</item>
        <item>夜间睡眠质量差？</item>
        <item>夜间睡觉无法平躺？</item>
        <item>夜间有出现阵发性呼吸困难？</item>
        <item>是否同时患有以下疾病？</item>
    </string-array>
    <string-array name="evaluate_text1_list">
        <item>不是</item>
        <item>没有</item>
        <item>不是</item>
        <item>不是</item>
        <item>不是</item>
        <item>无</item>
        <item>不是</item>
        <item>不是</item>
        <item>没有</item>
        <item>糖尿病</item>
    </string-array>
    <string-array name="evaluate_text2_list">
        <item>有时</item>
        <item>有时</item>
        <item>可以做部分家务</item>
        <item>有时需要</item>
        <item>有时</item>
        <item>双腿肿胀</item>
        <item>有时</item>
        <item>有时</item>
        <item>有时</item>
        <item>高血压</item>
    </string-array>
    <string-array name="evaluate_text3_list">
        <item>是</item>
        <item>经常</item>
        <item>完全不能</item>
        <item>长期需要</item>
        <item>经常</item>
        <item>双腿肿胀+腹部肿胀</item>
        <item>经常</item>
        <item>经常</item>
        <item>经常</item>
        <item>冠心病</item>
    </string-array>
    <string-array name="week_list">
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
        <item>周日</item>
    </string-array>
    <string name="move_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="time_too_long">说话时间超长</string>
    <string name="time_too_short">说话时间太短</string>
    <string name="recording_error_try_again">出错了，请重新录音</string>
    <string name="recording_tip">询医需要使用手机的麦克风:请在系统设置中打开麦克风功能。</string>
    <string name="chat_message_new_relation">现在可以跟你的患者聊天了</string>
    <string name="no_audio_permission">询医需要使用手机的麦克风;请在系统设置中打开麦克风功能</string>
    <string name="chat_is_resend_photo">是否重新发送图片</string>
    <string name="login_user_register">注册</string>
    <string name="exit">退出登录</string>
    <string name="patient_app_download">患者版下载</string>
    <string name="doctor_app_download">医生版下载</string>
    <string name="not_doctor">不是医生？</string>
    <string name="sign_in_phone_number">手机号:</string>
    <string name="sign_in_user_password">密&#160;&#160;&#160;&#160;码:</string>
    <string name="sign_in_forget_password">忘记密码</string>
    <string name="sign_in_my_register">我要注册</string>
    <string name="sign_in_title_reset_pwd_one_step">重设密码(1/2)</string>
    <string name="next">下一步</string>
    <string name="cancel">取消</string>
    <string name="giveup">放弃</string>
    <string name="later">以后决定</string>
    <string name="receive">接受</string>
    <string name="received">已添加</string>
    <string name="addHospital">添加医院</string>
    <string name="yes">确定</string>
    <string name="tip">温馨提示</string>
</resources>