<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.yikang.heartmark.view.TopBarView
        android:id="@+id/registTopBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="22dp"
        android:text="两步注册，制定属于你自己的健康管理"
        android:textSize="18dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edittext_img"
        android:gravity="center_vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/phone_img" />

        <EditText
            android:id="@+id/regist_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/regist_phone_hint"
            android:inputType="number"
            android:singleLine="true"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_img"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/code_img" />

        <EditText
            android:id="@+id/regist_code"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/regist_code_hint"
            android:inputType="number"
            android:singleLine="true"
            android:textSize="18dp" />

        <Button
            android:id="@+id/regist_code_get"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@drawable/get_code_img"
            android:text="获取验证码"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_img"
        android:gravity="center_vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/password_img" />

        <EditText
            android:id="@+id/regist_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="18dp" />
    </LinearLayout>



        <Button
            android:id="@+id/regist_next"
             android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_img"
            android:gravity="center"
            android:text="@string/regist_next_hint"
            android:textColor="@color/white"
            android:textSize="20dp" />

</LinearLayout>