<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.yikang.heartmark.view.TopBarView
        android:id="@+id/forgetTopBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/forget_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edittext_img"
            android:gravity="center_vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/phone_img" />

            <EditText
                android:id="@+id/forget_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/regist_phone_hint"
                android:inputType="number"
                android:singleLine="true"
                android:textSize="18dp" />
        </LinearLayout>

        <Button
            android:id="@+id/forget_next"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_img"
            android:gravity="center"
            android:text="@string/regist_next"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/forget_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:visibility="gone" >
        
        <TextView 
            android:id="@+id/forget_show_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="18dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/edittext_img"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/code_img" />

            <EditText
                android:id="@+id/forget_code"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/regist_code_hint"
                android:inputType="number"
                android:singleLine="true"
                android:textSize="18dp" />

            <Button
                android:id="@+id/forget_code_get"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@drawable/get_code_img"
                android:text="获取验证码"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_img"
            android:gravity="center_vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/phone_img" />

            <EditText
                android:id="@+id/forget_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="18dp" />
        </LinearLayout>

        <Button
            android:id="@+id/forget_finish"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_img"
            android:gravity="center"
            android:text="@string/finish"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>